Fix: update style on landing page - color was black when initial theme is light mode

--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -30,6 +30,10 @@ import { Promo } from './Promo/Promo';
 	</main>
 	<LandingPageFooter />
 	<style>
+		* {
+			color: white;
+		}
+
 		.welcome {
 			display: flex;
 			align-items: center;
