--- a/src/components/LandingPage/Promo/Comparison.astro
+++ b/src/components/LandingPage/Promo/Comparison.astro
@@ -74,6 +74,11 @@ const comparisonData: ComparisonData[] = [
 		padding: 1rem;
 		border-radius: 1rem;
 	}
+
+	li * {
+		color: white;
+	}
+
 	h3 {
 		margin: 0;
 	}
