--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -6,6 +6,7 @@ import SkipToContent from './SkipToContent.astro';
 import SidebarToggle from './SidebarToggle';
 import LanguageSelect from './LanguageSelect';
 import Search from './Search';
+import ThemeToggle from '../RightSidebar/ThemeToggleButton';
 
 type Props = {
 	currentPage: string;
@@ -36,6 +37,7 @@ const lang = getLanguageFromURL(currentPage);
 		<div class='search-item'>
 			<Search client:idle />
 		</div>
+		<ThemeToggle client:visible />
 	</nav>
 </header>
 
