--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -10,7 +10,8 @@ import { Promo } from './Promo/Promo';
 
 <style is:global>
 	header {
-		background-color: transparent;
+		background-color: rgba(255, 255, 255, 0);
+		backdrop-filter: blur(10px);
 	}
 
 	body {
