Fix: remove toggle for side menu article list when on landing page on mobile

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -19,9 +19,13 @@ const lang = getLanguageFromURL(currentPage);
 <header>
 	<SkipToContent />
 	<nav class='nav-wrapper' title='Top Navigation'>
-		<div class='menu-toggle'>
-			<SidebarToggle client:idle />
-		</div>
+		{
+			currentPage !== '/' && (
+				<div class='menu-toggle'>
+					<SidebarToggle client:idle />
+				</div>
+			)
+		}
 		<div class='logo flex'>
 			<a href='/'>
 				<AstroLogo size={40} />
