--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -7,36 +7,44 @@ export interface Props {
 }
 
 const { frontmatter, canonicalUrl } = Astro.props as Props;
-const formattedContentTitle = `${frontmatter.title} 🚀 ${SITE.title}`;
+const formattedContentTitle = `${frontmatter.title} 🌐 ${SITE.title}`;
 const imageSrc = frontmatter.image?.src ?? OPEN_GRAPH.image.src;
 const canonicalImageSrc = new URL(imageSrc, Astro.site);
 const imageAlt = frontmatter.image?.alt ?? OPEN_GRAPH.image.alt;
+
+const META_IMG_URL = 'https://bewebdev.tech/metaimage.webp';
+
+const DESCRIPTION = frontmatter.description
+	? frontmatter.description + ' learning materials'
+	: SITE.description;
 ---
 
 <!-- Page Metadata -->
-<link rel="canonical" href={canonicalUrl} />
+<link rel='canonical' href={canonicalUrl} />
 
 <!-- OpenGraph Tags -->
-<meta property="og:title" content={formattedContentTitle} />
-<meta property="og:type" content="article" />
-<meta property="og:url" content={canonicalUrl} />
-<meta property="og:locale" content={frontmatter.ogLocale ?? SITE.defaultLanguage} />
-<meta property="og:image" content={canonicalImageSrc} />
-<meta property="og:image:alt" content={imageAlt} />
+<meta property='og:title' content={formattedContentTitle} />
+<meta property='og:type' content='article' />
+<meta property='og:url' content={canonicalUrl} />
 <meta
-	name="description"
-	property="og:description"
-	content={frontmatter.description ?? SITE.description}
+	property='og:locale'
+	content={frontmatter.ogLocale ?? SITE.defaultLanguage}
 />
-<meta property="og:site_name" content={SITE.title} />
+<meta property='og:image' content={canonicalImageSrc} />
+<meta property='og:image:alt' content={imageAlt} />
+<meta name='description' property='og:description' content={DESCRIPTION} />
+<meta property='og:site_name' content={SITE.title} />
 
 <!-- Twitter Tags -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content={OPEN_GRAPH.twitter} />
-<meta name="twitter:title" content={formattedContentTitle} />
-<meta name="twitter:description" content={frontmatter.description ?? SITE.description} />
-<meta name="twitter:image" content={canonicalImageSrc} />
-<meta name="twitter:image:alt" content={imageAlt} />
+<meta name='twitter:card' content='summary_large_image' />
+<meta name='twitter:site' content={OPEN_GRAPH.twitter} />
+<meta name='twitter:title' content={formattedContentTitle} />
+<meta name='twitter:description' content={DESCRIPTION} />
+<meta name='twitter:image' content={canonicalImageSrc} />
+<meta name='twitter:image:alt' content={imageAlt} />
+
+<meta property='og:image' content={META_IMG_URL} />
+<meta property='twitter:image' content={META_IMG_URL} />
 
 <!--
   TODO: Add json+ld data, maybe https://schema.org/APIReference makes sense?
