Fix: update style for header title to hide properly on mobile

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -130,7 +130,7 @@ const currentPageIsRoot = currentPage === '/';
 			z-index: 0;
 		}
 
-		.logo h1 {
+		.logo .title-main {
 			display: initial;
 		}
 
