Fix: Navbar on iOS is transparent on landing page

--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -128,6 +128,7 @@ import { Promo } from './Promo/Promo';
 		header {
 			background-color: rgba(255, 255, 255, 0);
 			backdrop-filter: blur(10px);
+			-webkit-backdrop-filter: blur(10px);
 		}
 
 		body {
