--- a/src/components/LandingPage/Promo/ParallaxCard.module.css
+++ b/src/components/LandingPage/Promo/ParallaxCard.module.css
@@ -45,20 +45,7 @@
 	flex-direction: row-reverse;
 }
 
-.icon {
-	position: absolute;
-	width: 15%;
-	aspect-ratio: 1/1;
-	object-fit: scale-down;
-	z-index: 100;
-}
 
-.icon img {
-	width: 100%;
-	height: 100%;
-	z-index: 100;
-	position: relative;
-}
 
 .iconOne {
 	top: 0;
@@ -74,15 +61,15 @@
 	rotate: -20deg;
 }
 
-.root:nth-child(4) .icon img {
+.root:nth-child(4) .iconOne img {
 	animation: rotate 35s infinite linear;
 }
 
-.root:nth-child(4) .icon:nth-child(2) img {
+.root:nth-child(4) .iconTwo img {
 	animation: rotate 25s infinite linear reverse;
 }
 
-.root:nth-child(4) .icon:nth-child(3) img {
+.root:nth-child(4) .iconThree img {
 	animation: rotate 85s infinite linear;
 }
 
