--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,21 @@
 ---
-import HeadCommon from '../components/HeadCommon.astro';
+import HeadCommon from '../components/HeadCommon.astro'
 
-import HeadSEO from '../components/HeadSEO.astro';
-import LandingPage from '../components/LandingPage/LandingPage.astro';
-import LandingSEO from '../components/LandingPage/LandingSEO.astro';
-import type { Frontmatter } from '../config';
-import * as CONFIG from '../config';
+import LandingPage from '../components/LandingPage/LandingPage.astro'
+import LandingSEO from '../components/LandingPage/LandingSEO.astro'
+import type { Frontmatter } from '../config'
+import * as CONFIG from '../config'
 
 export interface Props {
-	frontmatter: Frontmatter;
-	canonicalUrl: URL;
+	frontmatter: Frontmatter
+	canonicalUrl: URL
 }
 
 const frontmatter: Frontmatter = {
 	description: '',
 	title: 'bewebdev.tech - the best web development learning materials',
 	layout: '',
-};
+}
 ---
 
 <html>
