--- a/src/components/LandingPage/LandingPageEndingCTA.astro
+++ b/src/components/LandingPage/LandingPageEndingCTA.astro
@@ -1,5 +1,5 @@
 ---
-import DocsBtn from './DocsBtn.astro';
+import DocsBtn from './DocsBtn.astro'
 ---
 
 <div class='root'>
@@ -44,7 +44,7 @@ import DocsBtn from './DocsBtn.astro';
 		width: 100vw;
 		background-image: radial-gradient(
 			ellipse at center,
-			#a4030379 0%,
+			var(--bewebdev-red) 0%,
 			rgba(255, 255, 255, 0) 70%
 		);
 		position: absolute;
