--- a/src/components/LandingPage/LandingPageFooter.astro
+++ b/src/components/LandingPage/LandingPageFooter.astro
@@ -1,6 +1,6 @@
 ---
-import FooterCommonLinksList from '../Footer/FooterCommonLinksList.astro';
-import LandingImageAttribution from './LandingImageAttribution.astro';
+import FooterCommonLinksList from '../Footer/FooterCommonLinksList.astro'
+import LandingImageAttribution from './LandingImageAttribution.astro'
 ---
 
 <footer>
@@ -11,8 +11,8 @@ import LandingImageAttribution from './LandingImageAttribution.astro';
 
 <style>
 	footer {
-		background-color: #000;
-		color: #fff;
+		background-color: var(--bewebdev-purple);
+		color: var(--theme-text);
 		padding: 20px;
 		z-index: 2137;
 		position: relative;
@@ -27,6 +27,6 @@ import LandingImageAttribution from './LandingImageAttribution.astro';
 		margin-right: 20px;
 	}
 	footer ul li a {
-		color: #fff;
+		color: var(--theme-text);
 	}
 </style>
