--- a/src/components/RightSidebar/MoreMenu.astro
+++ b/src/components/RightSidebar/MoreMenu.astro
@@ -1,13 +1,12 @@
 ---
-import ThemeToggleButton from './ThemeToggleButton';
-import * as CONFIG from '../../config';
+import * as CONFIG from '../../config'
 
 type Props = {
-	editHref: string;
-};
+	editHref: string
+}
 
-const { editHref } = Astro.props as Props;
-const showMoreSection = CONFIG.COMMUNITY_INVITE_URL;
+const { editHref } = Astro.props as Props
+const showMoreSection = CONFIG.COMMUNITY_INVITE_URL
 ---
 
 {showMoreSection && <h2 class='heading'>More</h2>}
