--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,24 +1,24 @@
 ---
-import HeadCommon from '../components/HeadCommon.astro';
-import HeadSEO from '../components/HeadSEO.astro';
-import Header from '../components/Header/Header.astro';
-import PageContent from '../components/PageContent/PageContent.astro';
-import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro';
-import RightSidebar from '../components/RightSidebar/RightSidebar.astro';
-import * as CONFIG from '../config';
-import type { MarkdownHeading } from 'astro';
-import Footer from '../components/Footer/Footer.astro';
+import HeadCommon from '../components/HeadCommon.astro'
+import HeadSEO from '../components/HeadSEO.astro'
+import Header from '../components/Header/Header.astro'
+import PageContent from '../components/PageContent/PageContent.astro'
+import LeftSidebar from '../components/LeftSidebar/LeftSidebar.astro'
+import RightSidebar from '../components/RightSidebar/RightSidebar.astro'
+import * as CONFIG from '../config'
+import type { MarkdownHeading } from 'astro'
+import Footer from '../components/Footer/Footer.astro'
 
 type Props = {
-	frontmatter: CONFIG.Frontmatter;
-	headings: MarkdownHeading[];
-};
+	frontmatter: CONFIG.Frontmatter
+	headings: MarkdownHeading[]
+}
 
-const { frontmatter, headings } = Astro.props as Props;
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const currentPage = Astro.url.pathname;
-const currentFile = `src/pages${currentPage.replace(/\/$/, '')}.md`;
-const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`;
+const { frontmatter, headings } = Astro.props as Props
+const canonicalURL = new URL(Astro.url.pathname, Astro.site)
+const currentPage = Astro.url.pathname
+const currentFile = `src/pages${currentPage.replace(/\/$/, '')}.md`
+const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 ---
 
 <html
