--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,13 +7,15 @@
 	width: 5px !important;
 	height: 5px !important;
 }
+
 *::-webkit-scrollbar-track {
-	background: #38383800 !important;
+	background: transparent !important;
+	border-radius: 5px !important;
 }
+
 *::-webkit-scrollbar-thumb {
-	background-color: #cfc9c578 !important;
-	border: 1px solid #1a1a1a !important;
-	border-radius: 2px !important;
+	background-color: var(--bewebdev-pink) !important;
+	border-radius: 5px !important;
 }
 
 /* Global focus outline reset */
@@ -24,6 +26,8 @@
 :root {
 	--user-font-scale: 1rem - 16px;
 	--max-width: calc(100% - 1rem);
+	--overlay-high: 2137;
+	--overlay-higher: 2138;
 }
 
 @media (min-width: 50em) {
@@ -59,11 +63,11 @@ nav ul {
 	padding: 0;
 }
 
-.content > section > * + * {
+.content>section>*+* {
 	margin-top: 1.25rem;
 }
 
-.content > section > :first-child {
+.content>section> :first-child {
 	margin-top: 0;
 }
 
@@ -141,54 +145,50 @@ a {
 	gap: 0.5rem;
 }
 
-a:hover {
-	opacity: 0.9;
-}
-
-article > section :is(ul, ol) > * + * {
+article>section :is(ul, ol)>*+* {
 	margin-top: 0.75rem;
 }
 
-article > section nav :is(ul, ol) > * + * {
+article>section nav :is(ul, ol)>*+* {
 	margin-top: inherit;
 }
 
-article > section li > :is(p, pre, blockquote):not(:first-child) {
+article>section li> :is(p, pre, blockquote):not(:first-child) {
 	margin-top: 1rem;
 }
 
-article > section :is(ul, ol) {
+article>section :is(ul, ol) {
 	padding-left: 1em;
 }
 
-article > section nav :is(ul, ol) {
+article>section nav :is(ul, ol) {
 	padding-left: inherit;
 }
 
-article > section nav {
+article>section nav {
 	margin-top: 1rem;
 	margin-bottom: 2rem;
 }
 
-article > section ::marker {
+article>section ::marker {
 	font-weight: bold;
 	color: var(--theme-text-light);
 }
 
-article > section iframe {
+article>section iframe {
 	width: 100%;
 	height: auto;
 	aspect-ratio: 16 / 9;
 }
 
-a > code {
+a>code {
 	position: relative;
 	color: var(--theme-text-accent);
 	background: transparent;
 	text-underline-offset: var(--padding-block);
 }
 
-a > code::before {
+a>code::before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -228,11 +228,11 @@ code {
 	word-break: break-word;
 }
 
-pre.astro-code > code {
+pre.astro-code>code {
 	all: unset;
 }
 
-pre > code {
+pre>code {
 	font-size: 1em;
 }
 
@@ -264,11 +264,13 @@ table {
 tr:nth-of-type(odd) {
 	background: var(--theme-bg-hover);
 }
+
 th {
 	background: var(--color-black);
 	color: var(--theme-color);
 	font-weight: bold;
 }
+
 td,
 th {
 	padding: 6px;
@@ -347,16 +349,20 @@ h2.heading {
 	border-left-color: var(--theme-accent);
 	color: var(--theme-accent);
 }
+
 .heading-link:focus-within {
 	color: var(--theme-text-light);
 	border-left-color: hsla(var(--color-gray-40), 1);
 }
+
 .heading-link svg {
 	opacity: 0.6;
 }
+
 .heading-link:hover svg {
 	opacity: 0.8;
 }
+
 .heading-link a {
 	display: inline-flex;
 	gap: 0.5em;
@@ -367,6 +373,7 @@ h2.heading {
 .heading-link.depth-3 {
 	padding-left: 2rem;
 }
+
 .heading-link.depth-4 {
 	padding-left: 3rem;
 }
