--- a/src/components/LandingPage/LandingPageEndingCTA.astro
+++ b/src/components/LandingPage/LandingPageEndingCTA.astro
@@ -1,11 +1,11 @@
 ---
-import DocsBtn from './DocsBtn.astro';
+import DocsBtn from './DocsBtn.astro'
 ---
 
 <div class='root'>
 	<div class='text'>
 		<h2>Are you ready to learn?</h2>
-		<DocsBtn href='/introduction' text='Go to the docs' />
+		<DocsBtn title='Docs page' href='/introduction' text='Go to the docs' />
 	</div>
 	<div class='bottom-grad' aria-hidden='true'></div>
 </div>
