--- a/src/components/LandingPage/LandingPageFooter.astro
+++ b/src/components/LandingPage/LandingPageFooter.astro
@@ -1,6 +1,6 @@
 ---
-import FooterCommonLinksList from '../Footer/FooterCommonLinksList.astro';
-import LandingImageAttribution from './LandingImageAttribution.astro';
+import FooterCommonLinksList from '../Footer/FooterCommonLinksList.astro'
+import LandingImageAttribution from './LandingImageAttribution.astro'
 ---
 
 <footer>
