--- a/src/components/LandingPage/LandingImageAttribution.astro
+++ b/src/components/LandingPage/LandingImageAttribution.astro
@@ -1,13 +1,20 @@
 <h2 class='sr-only'>Image attribution links</h2>
 <ul>
 	<li>
-		<a target='_blank' class='attribution' href='http://www.freepik.com'
+		<a
+			title='freepik.com'
+			target='_blank'
+			class='attribution'
+			href='http://www.freepik.com'
 			>Landing page image by pikisuperstar / Freepik</a
 		>
 	</li>
 	<li>
-		<a target='_blank' class='attribution' href='https://storyset.com/online'
-			>Online illustrations by Storyset</a
+		<a
+			title='storyset.com'
+			target='_blank'
+			class='attribution'
+			href='https://storyset.com/online'>Online illustrations by Storyset</a
 		>
 	</li>
 </ul>
