--- a/src/components/LandingPage/LandingPageFooter.astro
+++ b/src/components/LandingPage/LandingPageFooter.astro
@@ -14,7 +14,7 @@ import LandingImageAttribution from './LandingImageAttribution.astro'
 		background-color: var(--bewebdev-purple);
 		color: var(--theme-text);
 		padding: 20px;
-		z-index: 2137;
+		z-index: var(--overlay-high);
 		position: relative;
 	}
 	footer ul {
