--- a/src/components/LandingPage/Promo/Comparison.astro
+++ b/src/components/LandingPage/Promo/Comparison.astro
@@ -51,7 +51,7 @@ const comparisonData: ComparisonData[] = [
 		margin: 9rem auto;
 		margin-top: 13rem;
 		position: relative;
-		z-index: 100;
+		z-index: var(--z-floating-base);
 	}
 
 	.side-by-side {
