--- a/src/components/LandingPage/Promo/FloatingIcons/FloatingIcons.module.css
+++ b/src/components/LandingPage/Promo/FloatingIcons/FloatingIcons.module.css
@@ -3,7 +3,7 @@
 	width: 15%;
 	aspect-ratio: 1/1;
 	object-fit: scale-down;
-	z-index: 100;
+	z-index: var(--z-floating-base);
 	user-select: none;
 	pointer-events: none;
 }
@@ -11,6 +11,6 @@
 .icon img {
 	width: 100%;
 	height: 100%;
-	z-index: 100;
+	z-index: var(--z-floating-base);
 	position: relative;
 }
