Refactor: change comparison Component, split to files and move to own folder

--- a/src/components/LandingPage/LandingPage.astro
+++ b/src/components/LandingPage/LandingPage.astro
@@ -3,7 +3,7 @@ import Header from '../Header/Header.astro'
 import LandingPageEndingCTA from './LandingPageEndingCTA.astro'
 import LandingPageFooter from './LandingPageFooter.astro'
 import LandingPageLinks from './LandingPageLinks.astro'
-import Comparison from './Promo/Comparison.astro'
+import Comparison from './Comparison/Comparison.astro'
 const currentPage = Astro.url.pathname
 import { Promo } from './Promo/Promo'
 ---
