--- a/src/components/LandingPage/Comparison/Comparison.astro
+++ b/src/components/LandingPage/Comparison/Comparison.astro
@@ -1,11 +1,9 @@
 ---
-type ComparisonData = {
-	name: string
-	downside: string
-	icon: string
-}
+import ComparisonCard, {
+	Props as ComparisonCardProps,
+} from './ComparisonCard.astro'
 
-const comparisonData: ComparisonData[] = [
+const comparisonData: ComparisonCardProps[] = [
 	{
 		name: 'Bootcamp',
 		downside: 'Expensive',
@@ -28,23 +26,17 @@ const comparisonData: ComparisonData[] = [
 	<ul>
 		{
 			comparisonData.map((data) => (
-				<li class='side-by-side'>
-					<div>
-						<h3>{data.name}</h3>
-						<p>{data.downside}</p>
-					</div>
-					<div class='icon'>{data.icon}</div>
-				</li>
+				<ComparisonCard
+					downside={data.downside}
+					icon={data.icon}
+					name={data.name}
+				/>
 			))
 		}
 	</ul>
 </div>
 
 <style>
-	.icon {
-		font-size: 5rem;
-	}
-
 	.main-container {
 		max-width: 1200px;
 		width: min(90vw, 100%);
@@ -54,13 +46,6 @@ const comparisonData: ComparisonData[] = [
 		z-index: var(--z-floating-base);
 	}
 
-	.side-by-side {
-		display: flex;
-		justify-content: space-between;
-		gap: 1rem;
-		align-items: center;
-	}
-
 	ul {
 		list-style: none;
 		padding: 0;
@@ -68,22 +53,5 @@ const comparisonData: ComparisonData[] = [
 		grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
 		grid-auto-rows: 1fr;
 		grid-gap: 3rem;
-	}
-	li {
-		background-image: linear-gradient(
-			45deg,
-			var(--bewebdev-pink-saturated),
-			var(--bewebdev-purple-saturated)
-		);
-		padding: 1rem;
-		border-radius: 1rem;
-	}
-
-	li * {
-		color: var(--theme-text);
-	}
-
-	h3 {
-		margin: 0;
 	}
 </style>
