Refactor: change LandingPage to be split into more components

--- a/src/components/LandingPage/Footer/LandingPageFooter.astro
+++ b/src/components/LandingPage/Footer/LandingPageFooter.astro
@@ -1,12 +1,12 @@
 ---
-import FooterCommonLinksList from '../Footer/FooterCommonLinksList.astro'
-import LandingImageAttribution from './LandingImageAttribution.astro'
+import FooterCommonLinksList from '../../Footer/FooterCommonLinksList.astro'
+import ImageAttribution from './ImageAttribution.astro'
 ---
 
 <footer>
 	<h2 class='sr-only'>Footer links</h2>
 	<FooterCommonLinksList />
-	<LandingImageAttribution />
+	<ImageAttribution />
 </footer>
 
 <style>
