Fix: change z-index and display value for grid-left in docs on mobile

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -64,8 +64,8 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			#grid-left {
 				position: fixed;
 				background-color: var(--theme-bg);
-				z-index: 1ar (--z-elevated-higher) 0;
-				display: vone;
+				z-index: var(--z-elevated-higher);
+				display: none;
 			}
 
 			#grid-main {
