Fix: change element types in comparison section
to properly be indexed by google

--- a/src/components/LandingPage/Comparison/Comparison.astro
+++ b/src/components/LandingPage/Comparison/Comparison.astro
@@ -23,6 +23,7 @@ const comparisonData: ComparisonCardProps[] = [
 ---
 
 <div class='main-container'>
+	<h2 class='sr-only'>Compare bewebdev.tech to other services</h2>
 	<ul>
 		{
 			comparisonData.map((data) => (
