--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -1,29 +1,26 @@
 ---
-import { getLanguageFromURL } from '../../languages';
-import { SIDEBAR } from '../../config';
+import { SIDEBAR } from '../../config'
 
 type Props = {
-	currentPage: string;
-};
+	currentPage: string
+}
 
-const { currentPage } = Astro.props as Props;
+const { currentPage } = Astro.props as Props
 const currentPageMatch = currentPage.endsWith('/')
 	? currentPage.slice(1, -1)
-	: currentPage.slice(1);
-const langCode = getLanguageFromURL(currentPage);
-const sidebar = SIDEBAR[langCode];
+	: currentPage.slice(1)
 ---
 
 <nav aria-labelledby='grid-left'>
 	<ul class='nav-groups'>
 		{
-			Object.entries(sidebar).map(([header, children]) => (
+			Object.entries(SIDEBAR).map(([header, children]) => (
 				<li>
 					<div class='nav-group'>
 						<h2>{header}</h2>
 						<ul>
 							{children.map((child) => {
-								const url = Astro.site?.pathname + child.link;
+								const url = Astro.site?.pathname + child.link
 								return (
 									<li class='nav-link'>
 										<a
@@ -35,7 +32,7 @@ const sidebar = SIDEBAR[langCode];
 											{child.text}
 										</a>
 									</li>
-								);
+								)
 							})}
 						</ul>
 					</div>
@@ -47,11 +44,11 @@ const sidebar = SIDEBAR[langCode];
 
 <script is:inline>
 	window.addEventListener('DOMContentLoaded', () => {
-		var target = document.querySelector('[aria-current="page"]');
+		var target = document.querySelector('[aria-current="page"]')
 		if (target && target.offsetTop > window.innerHeight - 100) {
-			document.querySelector('.nav-groups').scrollTop = target.offsetTop;
+			document.querySelector('.nav-groups').scrollTop = target.offsetTop
 		}
-	});
+	})
 </script>
 
 <style>
