Fix: add lang attribute to the root html tag
for better seo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const frontmatter: Frontmatter = {
 }
 ---
 
-<html>
+<html dir={frontmatter.dir ?? 'ltr'} lang={frontmatter.lang ?? 'en'}>
 	<head>
 		<HeadCommon />
 		<LandingSEO />
