Style: formatted files with prettier
to make the files consistent

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,10 +1,10 @@
 ---
-import AvatarList from './AvatarList.astro';
-import FooterCommonLinksList from './FooterCommonLinksList.astro';
+import AvatarList from './AvatarList.astro'
+import FooterCommonLinksList from './FooterCommonLinksList.astro'
 type Props = {
-	path: string;
-};
-const { path } = Astro.props as Props;
+	path: string
+}
+const { path } = Astro.props as Props
 ---
 
 <footer>
