--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -1,6 +1,6 @@
 ---
-import '../styles/theme.css';
-import '../styles/index.css';
+import '../styles/theme.css'
+import '../styles/index.css'
 ---
 
 <!-- Global Metadata -->
@@ -17,14 +17,14 @@ import '../styles/index.css';
 
 <!-- This is intentionally inlined to avoid FOUC -->
 <script is:inline>
-	const root = document.documentElement;
-	const theme = localStorage.getItem('theme');
+	const root = document.documentElement
+	const theme = localStorage.getItem('theme')
 	if (
 		theme === 'dark' ||
 		(!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)
 	) {
-		root.classList.add('theme-dark');
+		root.classList.add('theme-dark')
 	} else {
-		root.classList.remove('theme-dark');
+		root.classList.remove('theme-dark')
 	}
 </script>
