--- a/src/components/LandingPage/Promo/GitStarPromoSection/Star.module.css
+++ b/src/components/LandingPage/Promo/GitStarPromoSection/Star.module.css
@@ -5,7 +5,14 @@
   left: 50%;
   user-select: none;
   pointer-events: none;
-  filter: drop-shadow(0 0 10px gold);
+  filter: drop-shadow(0 0 0px rgba(255, 217, 0, 0.497));
+  transition: filter 2s, scale 2s;
+  transform-origin: 10% 15%;
+}
+
+.strongGlow {
+  filter: drop-shadow(0 0 20px rgba(255, 217, 0, 0.443));
+  transition-delay: .2s;
 }
 
 @media (max-width: 768px) {
