Feat: change star icon to use SVG

--- a/src/components/LandingPage/Promo/GitStarPromoSection/Star.module.css
+++ b/src/components/LandingPage/Promo/GitStarPromoSection/Star.module.css
@@ -5,9 +5,11 @@
   left: 50%;
   user-select: none;
   pointer-events: none;
-  filter: drop-shadow(0 0 0px rgba(255, 217, 0, 0.497));
+  filter: drop-shadow(0 0 15px rgba(255, 217, 0, 0));
   transition: filter 2s, scale 2s;
   transform-origin: 10% 15%;
+  width: 60px;
+  height: 60px;
 }
 
 .strongGlow {
