--- a/src/components/LandingPage/LandingSEO.astro
+++ b/src/components/LandingPage/LandingSEO.astro
@@ -1,9 +1,9 @@
 ---
-const META_IMG_URL = 'https://bewebdev.tech/metaimage.webp';
-const URL = 'https://bewebdev.tech/';
+const META_IMG_URL = 'https://bewebdev.tech/metaimage.webp'
+const URL = 'https://bewebdev.tech/'
 const DESCRIPTION =
-	'We’ve done the work for you. We’ve collected the best resources and put them in one place.';
-const TITLE = 'bewebdev.tech - The best way to learn web development';
+	'We’ve done the work for you. We’ve collected the best resources and put them in one place.'
+const TITLE = 'bewebdev.tech - The best way to learn web development'
 ---
 
 <title>{TITLE}</title>
