--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -1,28 +1,28 @@
 ---
-import type { Frontmatter } from '../../config';
-import MoreMenu from '../RightSidebar/MoreMenu.astro';
-import TableOfContents from '../RightSidebar/TableOfContents';
-import type { MarkdownHeading } from 'astro';
+import type { Frontmatter } from '../../config'
+import MoreMenu from '../RightSidebar/MoreMenu.astro'
+import TableOfContents from '../RightSidebar/TableOfContents'
+import type { MarkdownHeading } from 'astro'
 
 type Props = {
-	frontmatter: Frontmatter;
-	headings: MarkdownHeading[];
-	githubEditUrl: string;
-};
+	frontmatter: Frontmatter
+	headings: MarkdownHeading[]
+	githubEditUrl: string
+}
 
-const { frontmatter, headings, githubEditUrl } = Astro.props as Props;
-const title = frontmatter.title;
+const { frontmatter, headings, githubEditUrl } = Astro.props as Props
+const title = frontmatter.title
 ---
 
-<article id="article" class="content">
-	<section class="main-section">
-		<h1 class="content-title" id="overview">{title}</h1>
-		<nav class="block sm:hidden">
-			<TableOfContents client:media="(max-width: 50em)" headings={headings} />
+<article id='article' class='content'>
+	<section class='main-section'>
+		<h1 class='content-title' id='overview'>{title}</h1>
+		<nav class='block sm:hidden'>
+			<TableOfContents client:media='(max-width: 50em)' headings={headings} />
 		</nav>
 		<slot />
 	</section>
-	<nav class="block sm:hidden">
+	<nav class='block sm:hidden'>
 		<MoreMenu editHref={githubEditUrl} />
 	</nav>
 </article>
