--- a/src/components/Footer/AvatarList.astro
+++ b/src/components/Footer/AvatarList.astro
@@ -1,32 +1,32 @@
 ---
-import { unknownToError } from '../../utils/unknownToError';
+import { unknownToError } from '../../utils/unknownToError'
 
 // fetch all commits for just this page's path
 type Props = {
-	path: string;
-};
-const { path } = Astro.props as Props;
-const resolvedPath = `${path}`;
-const url = `https://api.github.com/repos/NowYouKnowProgramming/webdev-learning-materials/commits`;
-const commitsURL = `https://github.com/NowYouKnowProgramming/webdev-learning-materials/commits/main/${resolvedPath}`;
+	path: string
+}
+const { path } = Astro.props as Props
+const resolvedPath = `${path}`
+const url = `https://api.github.com/repos/NowYouKnowProgramming/webdev-learning-materials/commits`
+const commitsURL = `https://github.com/NowYouKnowProgramming/webdev-learning-materials/commits/main/${resolvedPath}`
 
 type Commit = {
 	author?: {
-		id: string;
-		login: string;
-	};
-};
+		id: string
+		login: string
+	}
+}
 
 async function getCommits(url: string): Promise<Commit[]> {
 	try {
-		const token = import.meta.env.SNOWPACK_PUBLIC_GITHUB_TOKEN ?? 'hello';
+		const token = import.meta.env.SNOWPACK_PUBLIC_GITHUB_TOKEN ?? 'hello'
 		if (!token) {
 			throw new Error(
 				'Cannot find "SNOWPACK_PUBLIC_GITHUB_TOKEN" used for escaping rate-limiting.'
-			);
+			)
 		}
 
-		const auth = `Basic ${Buffer.from(token, 'binary').toString('base64')}`;
+		const auth = `Basic ${Buffer.from(token, 'binary').toString('base64')}`
 
 		const res = await fetch(url, {
 			method: 'GET',
@@ -34,47 +34,47 @@ async function getCommits(url: string): Promise<Commit[]> {
 				Authorization: auth,
 				'User-Agent': 'astro-docs/1.0',
 			},
-		});
+		})
 
-		const data = await res.json();
+		const data = await res.json()
 
 		if (!res.ok) {
 			throw new Error(
 				`Request to fetch commits failed. Reason: ${res.statusText}
        Message: ${data.message}`
-			);
+			)
 		}
 
-		return data;
+		return data
 	} catch (e) {
-		const error = unknownToError(e);
+		const error = unknownToError(e)
 
 		console.warn(`[error]  /src/components/AvatarList.astro 
-    ${error.message ?? error}`);
-		return [];
+    ${error.message ?? error}`)
+		return []
 	}
 }
 
 function removeDups(arr: Commit[]) {
-	const map = new Map<string, NonNullable<Commit['author']>>();
+	const map = new Map<string, NonNullable<Commit['author']>>()
 
 	for (let item of arr) {
 		// Deduplicate based on author.id
-		const author = item.author;
-		const isBot = author?.login.endsWith('[bot]');
+		const author = item.author
+		const isBot = author?.login.endsWith('[bot]')
 
-		if (!author || isBot) continue;
+		if (!author || isBot) continue
 
-		map.set(author.id, { login: author.login, id: author.id });
+		map.set(author.id, { login: author.login, id: author.id })
 	}
 
-	return [...map.values()];
+	return [...map.values()]
 }
 
-const data = await getCommits(url);
-const unique = removeDups(data);
-const recentContributors = unique.slice(0, 3); // only show avatars for the 3 most recent contributors
-const additionalContributors = unique.length - recentContributors.length; // list the rest of them as # of extra contributors
+const data = await getCommits(url)
+const unique = removeDups(data)
+const recentContributors = unique.slice(0, 3) // only show avatars for the 3 most recent contributors
+const additionalContributors = unique.length - recentContributors.length // list the rest of them as # of extra contributors
 ---
 
 <!-- Thanks to @5t3ph for https://smolcss.dev/#smol-avatar-list! -->
