--- a/src/components/LandingPage/Promo/GitStarPromoSection/GitStarPromoSection.module.css
+++ b/src/components/LandingPage/Promo/GitStarPromoSection/GitStarPromoSection.module.css
@@ -49,7 +49,7 @@
 .button:focus {
   animation: pulse .8s;
   box-shadow: 0 0 2em 2em rgb(255 255 255 / 0%);
-  --hover: gold;
+  --hover: var(--gold-color);
   scale: 0.98;
   background-color: var(--bewebdev-purple-saturated);
 }
@@ -58,7 +58,7 @@
 
 @keyframes pulse {
   0% {
-    box-shadow: 0 0 0 0 gold;
+    box-shadow: 0 0 0 0 var(--gold-color);
   }
 }
 
