--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,6 +35,7 @@
 	--z-floating-highest: 300;
 	--overlay-high: 2137;
 	--overlay-higher: 2138;
+	--gold-color: hsl(51, 100%, 50%);
 }
 
 @media (min-width: 50em) {
