Feat: add visited color for links in docs and description of colors to article layout

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -37,6 +37,8 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			}
 		</title>
 		<style>
+
+
 			body {
 				width: 100%;
 				display: grid;
@@ -113,6 +115,10 @@ const githubEditUrl = `${CONFIG.GITHUB_EDIT_URL}/${currentFile}`
 			.layout > * {
 				width: 100%;
 				height: 100%;
+			}
+
+			.main-section a:visited {
+				color: var(--theme-text-accent-visited);
 			}
 
 			.mobile-sidebar-toggle {
