--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -15,6 +15,9 @@ const title = frontmatter.title
 ---
 
 <article id='article' class='content'>
+	<div class="color-desc" aria-hidden="true">
+		<span class="visited">Visited article</span><span class="not-visited">Not visited</span>
+	</div>
 	<section class='main-section'>
 		<h1 class='content-title' id='overview'>{title}</h1>
 		<nav class='block sm:hidden'>
@@ -28,6 +31,34 @@ const title = frontmatter.title
 </article>
 
 <style>
+	.color-desc {
+		display: flex;
+		align-items: center;
+		gap: 8px;
+		flex-wrap: wrap;
+		margin-bottom: 1rem;
+	}
+
+	.color-desc > * {
+		flex: 0 0 100px;
+		white-space: nowrap;
+	}
+
+	.visited {
+		background-color: var(--theme-text-accent-visited);
+	}
+
+	.not-visited {
+		background-color: var(--theme-text-accent);
+	}
+
+	.visited,.not-visited {
+		padding: 4px 16px;
+		font-weight: bold;
+		color: var(--theme-bg);
+		border-radius: 25px;
+	}
+
 	.content {
 		padding: 0;
 		max-width: 75ch;
