--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -67,6 +67,7 @@
 	color-scheme: light;
 	--theme-accent: hsla(var(--color-blue), 1);
 	--theme-text-accent: hsla(var(--color-blue), 1);
+	--theme-text-accent-visited: var(--bewebdev-red);
 	--theme-accent-opacity: 0.15;
 	--theme-divider: hsla(var(--color-gray-95), 1);
 	--theme-text: hsla(var(--color-gray-10), 1);
@@ -101,6 +102,7 @@ body {
 	--theme-accent-opacity: 0.15;
 	--theme-accent: hsla(var(--color-blue), 1);
 	--theme-text-accent: hsla(var(--color-yellow), 1);
+	--theme-text-accent-visited: var(--bewebdev-pink);
 	--theme-divider: hsla(var(--color-gray-30), 1);
 	--theme-text: hsla(var(--color-gray-90), 1);
 	--theme-text-light: hsla(var(--color-gray-80), 1);
